--- a/www/Test3/index.html
+++ b/www/Test3/index.html
@@ -22,7 +22,8 @@
 		</div>
 		<div class="pill"></div>
 		</div>
-		<ul class="list">
+		<div class="list">
+		<ul >
 			<li>1</li>
 			<li>2</li>
 			<li>3</li>
@@ -45,18 +46,32 @@
 			<li>20</li>
 			<li>21</li>
 		</ul>
+		</div>
 		<div class="counter-wrapp">
 			<div id="firstCounter" class="counter">
 			<div class="counter-cont">
 		</div>
 		</div>
 		</div>
-
+		<div class="date-unit">
+		<div>
+		<a href="#">День</a>
+		<a href="#">Неделя</a>
+		<a href="#">Месяц</a>
+		</div>
+			
+		</div>
 	</div>
 
 		<div id="slide2" class="slide">
-		<div class="old-man"></div>
-		<ul class="list">
+		<div class="old-man">
+		<div class="logo">
+		<h1>Розулип</h1><h4>Легко на сердце от чистых сосудов</h4>
+		</div>
+		<div class="pill"></div>
+		</div>
+		<div class="list">
+		<ul >
 			<li>1</li>
 			<li>2</li>
 			<li>3</li>
@@ -79,14 +94,21 @@
 			<li>20</li>
 			<li>21</li>
 		</ul>
+		</div>
 		<div class="counter-wrapp">
 			<div id="secondCounter" class="counter">
 			<div class="counter-cont">
 		</div>
 		</div>
 		</div>
-		<div class="pill"></div>
-
+		<div class="date-unit">
+		<div>
+		<a href="#">День</a>
+		<a href="#">Неделя</a>
+		<a href="#">Месяц</a>
+		</div>
+			
+		</div>
 	</div>
 
 	</div>
