--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -15,11 +15,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Pad_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Легкое управление интернет магазином</h2>
 			<div class="spoiler-body">
 				<p>Несмотря на то, что магазин идеально подходит новичкам, функционал магазина от этого никак не пострадал, и его с легкостью могут использовать профессионалы. Для создания своего магазина с нуля вам не нужны знания языков программирования и настройки серверов: все действия происходят через браузер в интуитивно-понятном интерфейсе. Даже если у вас возникнут вопросы, вы всегда сможете получить помощь.</p>
@@ -29,11 +25,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Settings_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Управление и настройка, через удобную Админ-панель.</h2>
 			<div class="spoiler-body">
 				<p>
@@ -43,11 +35,7 @@
 	</li>
 	<li>
 		<div class="spoiler-link">
-			<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#List_icon" ></use>
-			</svg>
-			</div>
+			<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Персонализация</h2>
 			<div class="spoiler-body">
 				<p>
@@ -58,11 +46,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Market_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Управление товарами</h2>
 			<div class="spoiler-body">
 				<p>
@@ -73,11 +57,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Delivery_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Доставка товаров</h2>
 			<div class="spoiler-body">
 				<p>
@@ -88,11 +68,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Paid_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Поддержка оплаты заказов, через любые сервисы.</h2>
 			<div class="spoiler-body">
 				<p>
@@ -103,11 +79,7 @@
 	<li>
 		
 		<div class="spoiler-link">
-		<div class="description_icons">
-			<svg viewBox="0 0 100 100">
-				<use xlink:href="/img/Description_icons.svg#Soc_icon" ></use>
-			</svg>
-			</div>
+		<svg class="description_icons" viewBox="0 0 55.96 50"></svg>
 			<h2>Интеграция с сайтом</h2>
 			<div class="spoiler-body">
 				<p> Интернет-магазин может быть лишь частью вашего сайта. К примеру, пользователь может почитать интересные статьи о вас и характеристике ваших товаров, после чего перейти в интернет-магазин и что-то купить.</p>
@@ -127,17 +99,24 @@ if($('.spoiler-body', this).is(":visible")){
 }
 $('.spoiler-body', this).stop().slideToggle(300);
 });
-$(document).ready(function(){
-var SVG = document.getElementById("svg_arrow");	
-var svgEl = SVG.getElementById('shadow');
-	$( ".side_arrow" ).hover(
-  function() {
-    $(SVG).css("opacity","0.2");
-  }, function() {
-    $(SVG).css("opacity","1");
-  }
-);
+
+var iconSpot = Snap('.description_icons');
+Snap.load("/img/Description_icons.svg", onSVGLoaded ) ;
+function onSVGLoaded( data ){
+    iconSpot.append(data);
+};
+
+$( ".spoiler-link" ).click(function() {
+if($('.spoiler-body', this).is(":visible")){
+	$('h2', this).css('color',''),
+	$('.RoundArrow').
+} else {
+	$('h2', this).css('color','#d7844d');
+}
+$('.spoiler-body', this).stop().slideToggle(300);
 });
+
+
 </script>
 
 
