--- a/www/pages/shop.html
+++ b/www/pages/shop.html
@@ -108,10 +108,11 @@ function onSVGLoaded( data ){
 
 $( ".spoiler-link" ).click(function() {
 if($('.spoiler-body', this).is(":visible")){
-	$('h2', this).css('color',''),
-	$('.RoundArrow').
+	$('h2', this).css('color','');
+	$('.RoundArrow').animate({transform:'r90, center'}, 1000, mina.bounce)
 } else {
 	$('h2', this).css('color','#d7844d');
+	$('.RoundArrow').animate({transform:'r0, center'}, 1000, mina.bounce)
 }
 $('.spoiler-body', this).stop().slideToggle(300);
 });
